--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,7 +16,6 @@
     <string name="trustee_contact">Trustee Contact</string>
     <string name="current_position">Current Position</string>
     <string name="home_page">Home Page</string>
-    <string name="health">Health</string>
     <string name="community">Community</string>
     <string name="select_you_position_radius">Select You Position Radius</string>
     <string name="exact_radius">Exact Radius</string>
@@ -25,4 +24,8 @@
     <string name="city_basis_radius">City Basis Radius</string>
     <string name="decline">Decline</string>
     <string name="send_request">Send Request</string>
+    <string name="set_radius">Set Radius</string>
+    <string name="confirm">Confirm</string>
+    <string name="health">Health</string>
+    <string name="comminity">Comminity</string>
 </resources>
